forth/test/fail/test_const_fold_rhs_divmod_zero.af
use' ../../lang.af
fun: test_const_fold_rhs_divmod_zero { val -- rem quo } val 0 /mod end
